new upsell flow and account id

--- a/cb/discoverya.html
+++ b/cb/discoverya.html
@@ -46,7 +46,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <script>
     window.clickbank = {
-      vendor: "getpegasus"
+      vendor: "getpeg"
     }
   </script>
   <script src="https://scripts.clickbank.net/hop.min.js" defer></script>
@@ -509,7 +509,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
             </div>
             <div class="flex items-center justify-center px-2 lg:px-0">
               <a
-                href="https://getpegasus.pay.clickbank.net/?cbitems=1&cbfid=60687&template=emmatimer&vtid=vida">
+                href="https://getpeg.pay.clickbank.net/?cbitems=1&cbfid=61943&template=emmatimer&vtid=vida">
                 <img alt="order now button" src="/images/order-now-button.webp">
               </a>
             </div>
