--- a/cb/discoveryb.html
+++ b/cb/discoveryb.html
@@ -42,7 +42,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
 
   <script>
-    window.clickbank = { vendor: "getpegasus" }
+    window.clickbank = { vendor: "getpeg" }
   </script>
   <script src="https://scripts.clickbank.net/hop.min.js" defer></script>
   <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
@@ -479,7 +479,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
                 </div>
 
                 <div class="flex items-center justify-center px-2 lg:px-0">
-                  <a href="https://getpegasus.pay.clickbank.net/?cbitems=1&cbfid=60687&template=emmatimer&vtid=vidb">
+                  <a href="https://getpeg.pay.clickbank.net/?cbitems=1&cbfid=61943&template=emmatimer&vtid=vidb">
                     <img alt="order now button" src="/images/order-now-button.webp">
                   </a>
                 </div>
