new upsell funnel flow

--- a/cb/us1/index.html
+++ b/cb/us1/index.html
@@ -157,14 +157,14 @@
 
             <div
               class="bg-gradient-to-b from-upsell-green-2 to-upsell-green w-full text-center rounded-xl border-2 border-upsell-green px-2 lg:px-8 py-3 mt-6">
-              <a href="https://getpegasus.pay.clickbank.net/?cbitems=2&cbfid=60687&template=emmatimer&cbur=a"
+              <a href="https://getpeg.pay.clickbank.net/?cbitems=2&cbfid=61943&template=emmatimer&cbur=a"
                 class="font-sans text-lg lg:text-3xl uppercase text-white font-bold oswald-font">
                 I changed my mind. Please Activate my copy of The Code for the VIP-Only price of
                 just&nbsp;$97.</a>
             </div>
 
             <div class="text:lg lg:text-xl font-serif underline text-center mt-6">
-              <a href="https://getpegasus.pay.clickbank.net/?cbur=d&cbitems=3&cbfid=60687&template=emmatimer">Deactivate The Code
+              <a href="https://getpeg.pay.clickbank.net/?cbitems=2&cbur=d&cbfid=61943&template=emmatimer">Deactivate The Code
                 update, and remove it completley from my Pegasus. Pass My $4561
                 Discount to Another&nbsp;Member.
               </a>
@@ -319,7 +319,7 @@
               </div>
 
               <div class="flex items-center justify-center px-2 lg:px-0">
-                <a href="https://getpegasus.pay.clickbank.net/?cbitems=2&cbfid=60687&template=emmatimer&cbur=a">
+                <a href="https://getpeg.pay.clickbank.net/?cbitems=2&cbfid=61943&template=emmatimer&cbur=a">
                   <img alt="continue button" src="/images/continue-satisfaction-button.png" class="continue-button-responsive">
                 </a>
               </div>
