new profile test

--- a/cb/ds2/index.html
+++ b/cb/ds2/index.html
@@ -82,7 +82,7 @@
         <!-- ClickBank Tracking Script -->
         <script>
             window.clickbank = {
-                vendor: "getpegasus"
+                vendor: "getpeg"
             }
         </script>
         <script src="https://scripts.clickbank.net/hop.min.js" defer></script>
@@ -125,12 +125,12 @@
                         <div class="clearall"></div>
                         <div class="down5btm">
                             <p class="down5s2txt">CLOSE THIS PAGE AND THE DEAL IS GONE&nbsp;FOREVER</p>
-                            <a href="https://getpegasus.pay.clickbank.net/?cbitems=5&cbfid=60687&template=emmatimer&cbur=a" class="down5s2btn">
+                            <a href="https://getpeg.pay.clickbank.net/?cbitems=5&cbfid=61950&template=emmatimer&cbur=a" class="down5s2btn">
                                 Give Me My Discount!
                             </a>
                             <br>
                             <a
-                                href="https://getpegasus.pay.clickbank.net/?cbur=d&cbitems=7&cbfid=60687&template=emmatimer"
+                                href="https://getpeg.pay.clickbank.net/?cbur=d&cbitems=7&cbfid=61950&template=emmatimer"
                                 class="down5nothank"
                                 id="down-nothank1"
                                 ><img src="/images/cross.png" alt="" /> No thanks. I don't want to unlock The Vault
@@ -193,11 +193,11 @@
 
                     <div class="down5btm">
                         <p class="down5s2txt down5s2txt2">CLOSE THIS PAGE AND THE DEAL IS GONE&nbsp;FOREVER</p>
-                        <a href="https://getpegasus.pay.clickbank.net/?cbitems=5&cbfid=60687&template=emmatimer&cbur=a" class="down5s2btn">
+                        <a href="https://getpeg.pay.clickbank.net/?cbitems=5&cbfid=61950&template=emmatimer&cbur=a" class="down5s2btn">
                             Give Me My Discount!
                         </a>
                         <a
-                            href="https://getpegasus.pay.clickbank.net/?cbur=d&cbitems=7&cbfid=60687&template=emmatimer"
+                            href="https://getpeg.pay.clickbank.net/?cbur=d&cbitems=7&cbfid=61950&template=emmatimer"
                             class="down5nothank"
                             id="down-nothank2"
                             ><img src="/images/cross.png" alt="" /> No thanks. I don't want to unlock The Vault update.
