--- a/cb/ds3/index.html
+++ b/cb/ds3/index.html
@@ -121,7 +121,7 @@
                         <div class="clearall"></div>
                         <div class="down5btm">
                             <p class="down5s2txt">CLOSE THIS PAGE AND THE DEAL IS GONE&nbsp;FOREVER</p>
-                            <a href="https://getpegasus.pay.clickbank.net/?cbitems=7&cbfid=60687&template=emmatimer&cbur=a" class="down5s2btn">
+                            <a href="https://getpeg.pay.clickbank.net/?cbitems=7&cbfid=61950&template=emmatimer&cbur=a" class="down5s2btn">
                                 Give Me My Discount!
                             </a>
                             <br>
@@ -188,7 +188,7 @@
 
                     <div class="down5btm">
                         <p class="down5s2txt down5s2txt2">CLOSE THIS PAGE AND THE DEAL IS GONE&nbsp;FOREVER</p>
-                        <a href="https://getpegasus.pay.clickbank.net/?cbitems=7&cbfid=60687&template=emmatimer&cbur=a" class="down5s2btn">
+                        <a href="https://getpeg.pay.clickbank.net/?cbitems=7&cbfid=61950&template=emmatimer&cbur=a" class="down5s2btn">
                             Give Me My Discount!
                         </a>
                         <a
