--- a/cb/ds1/index.html
+++ b/cb/ds1/index.html
@@ -82,7 +82,7 @@
         <!-- ClickBank Tracking Script -->
         <script>
             window.clickbank = {
-                vendor: "getpegasus"
+                vendor: "getpeg"
             }
         </script>
         <script src="https://scripts.clickbank.net/hop.min.js" defer></script>
