new splut test winner

--- a/cb/discoverya.html
+++ b/cb/discoverya.html
@@ -423,7 +423,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
                                 if (params.get('showoffer') === '1') {
                                     show = true;
                                 } else {
-                                    setTimeout(() => show = true, 980000);
+                                    setTimeout(() => show = true, 1045000);
                                 }
                         " x-show="show"
           class="mx-4 mt-12 rounded-xl border-2 border-black pb-6 lg:mx-0 bg-white">
@@ -509,7 +509,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
             </div>
             <div class="flex items-center justify-center px-2 lg:px-0">
               <a
-                href="https://getpeg.pay.clickbank.net/?cbitems=1&cbfid=61950&template=emmatimer&vtid=vida">
+                href="https://getpeg.pay.clickbank.net/?cbitems=1&cbfid=60687&template=emmatimer&vtid=vidb">
                 <img alt="order now button" src="/images/order-now-button.webp">
               </a>
             </div>
@@ -779,7 +779,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
           mobileVideoContainer.innerHTML = "";
 
           const videoId = "jxe0c467oc";
-          const mobileVideoId = "zb7dfnov74";
+          const mobileVideoId = "ucn7uqlrqw";
 
           const wistiaDiv = document.createElement("div");
           const mobileWistiaDiv = document.createElement("div");
