--- a/cb/discoverya.html
+++ b/cb/discoverya.html
@@ -509,7 +509,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
             </div>
             <div class="flex items-center justify-center px-2 lg:px-0">
               <a
-                href="https://getpeg.pay.clickbank.net/?cbitems=1&cbfid=60687&template=emmatimer&vtid=vidb">
+                href="https://getpeg.pay.clickbank.net/?cbitems=1&cbfid=60687&template=emmatimer&vtid=vida">
                 <img alt="order now button" src="/images/order-now-button.webp">
               </a>
             </div>
