--- a/cb/discoverya.html
+++ b/cb/discoverya.html
@@ -779,7 +779,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
           mobileVideoContainer.innerHTML = "";
 
           const videoId = "jxe0c467oc";
-          const mobileVideoId = "ucn7uqlrqw";
+          const mobileVideoId = "zb7dfnov74";
 
           const wistiaDiv = document.createElement("div");
           const mobileWistiaDiv = document.createElement("div");
