--- a/cb/ds3/index.html
+++ b/cb/ds3/index.html
@@ -78,7 +78,7 @@
         <!-- ClickBank Tracking Script -->
         <script>
             window.clickbank = {
-                vendor: "getpegasus"
+                vendor: "getpeg"
             }
         </script>
         <script src="https://scripts.clickbank.net/hop.min.js" defer></script>
