--- a/cbty2507/order-confirmation.html
+++ b/cbty2507/order-confirmation.html
@@ -651,14 +651,15 @@ document.getElementById("otherQuestion").href = mailto(
 
 /* ================ ORDER SUMMARY ================ */
 const productMap = {
-  "1": { name: "Pegasus", price: 47, img: "/images/main-product.png", url: "/cbty2507/ty-access/" },
-  "2": { name: "The Code", price: 97, img: "/images/the-code-laptop.png", url: "/cbty2507/ty-access/the-code-access/" },
-  "3": { name: "The Code ($30 OFF)", price: 67, img: "/images/the-code-laptop.png", url: "/cbty2507/ty-access/the-code-access/" },
-  "4": { name: "The Vault", price: 67, img: "/images/the-vault-laptop.png", url: "/cbty2507/ty-access/the-vault-access/" },
-  "5": { name: "The Vault ($40 OFF)", price: 27, img: "/images/the-vault-laptop.png", url: "/cbty2507/ty-access/the-vault-access/" },
-  "6": { name: "Pegasus X-Files", price: 29, img: "/images/pegasus-x-laptop.png", url: "/cbty2507/ty-access/x-files-access/" },
-  "7": { name: "Pegasus X-Files ($10 OFF)", price: 19, img: "/images/pegasus-x-laptop.png", url: "/cbty2507/ty-access/x-files-access/" }
+  "1": { name: "Pegasus", price: 47, img: "/images/main-product.png", url: "https://mypegasusnow.com/ty-access/" },
+  "2": { name: "The Code", price: 97, img: "/images/the-code-laptop.png", url: "https://mypegasusnow.com/ty-access/the-code-access/" },
+  "3": { name: "The Code ($30 OFF)", price: 67, img: "/images/the-code-laptop.png", url: "/https://mypegasusnow.com/ty-access/the-code-access/" },
+  "4": { name: "The Vault", price: 67, img: "/images/the-vault-laptop.png", url: "https://mypegasusnow.com/ty-access/the-vault-access/" },
+  "5": { name: "The Vault ($40 OFF)", price: 27, img: "/images/the-vault-laptop.png", url: "https://mypegasusnow.com/ty-access/the-vault-access/" },
+  "6": { name: "Pegasus X-Files", price: 29, img: "/images/pegasus-x-laptop.png", url: "https://mypegasusnow.com/ty-access/x-files-access/" },
+  "7": { name: "Pegasus X-Files ($10 OFF)", price: 19, img: "/images/pegasus-x-laptop.png", url: "https://mypegasusnow.com/ty-access/x-files-access/" }
 };
+
 
 let purchased = [];
 const itemString = params.get("item");
