--- a/cb/us1/index.html
+++ b/cb/us1/index.html
@@ -19,13 +19,15 @@
   /* === INIT ALL PIXELS === */
   fbq('init', '857412070092730');   // Your pixel
   fbq('init', '1693628627996296');  // Ryan
-  fbq('init', '1857604301853683');  // Greg 1
-  fbq('init', '1193492015440563');  // Greg 2
-  fbq('init', '1156832636435723');  // Greg 3
   fbq('init', '2272426799864518');  // Paul
   fbq('init', '2679888495704455');  // Lee
 
-  
+  /*  Gregs Pixels 
+  fbq('init', '1857604301853683');  // Greg 1
+  fbq('init', '1193492015440563');  // Greg 2
+  fbq('init', '1156832636435723');  // Greg 3
+  */
+
   /* === TRACK EVENTS (sent to ALL pixels above) === */
   fbq('track', 'PageView');
   fbq('track', 'Purchase', { currency: 'USD', value: 47.0 });
