--- a/webby/index.html
+++ b/webby/index.html
@@ -302,7 +302,7 @@
       <div class="cta-wrap">
         <div class="cta-title">Continue here:</div>
         <a class="video-cta"
-           href="https://jvz3.com/c/3218449/415009?tid=typage"
+           href="https://jvz3.com/c/3218449/415009?tid=welcome1bridge"
            target="_blank"
            rel="noopener">
           ▶ Watch Free Training
