--- a/webby/index.html
+++ b/webby/index.html
@@ -276,8 +276,8 @@
 <body>
   <div class="card">
     <div class="center">
-      <h1>Quick Video (Watch Now)</h1>
-      <p class="sub">Tap the image to open the video. The button will appear directly underneath it.</p>
+      <h1>IMPORTANT: Watch This Short Video Now</h1>
+      <p class="sub">$1k-$5k/Day Method</p>
     </div>
 
     <!-- Click to open video modal -->
@@ -299,18 +299,53 @@
           allowfullscreen></iframe>
       </div>
 
-      <div class="cta-wrap">
-        <div class="cta-title">Continue here:</div>
-        <a class="video-cta"
-           href="https://jvz3.com/c/3218449/415009?tid=welcome1bridge"
-           target="_blank"
+
+      <div class="content">
+        <h2>Imagine Waking Up To $1,000–$5,000 A Day</h2>
+  
+        <p>
+          Imagine rolling out of bed, checking your phone, and seeing an extra
+          <strong>$1,000, $3,000, or even $5,000</strong> deposited into your account—
+          without grinding away at a 9-to-5 job, begging for overtime, or stressing
+          over side hustles that barely pay the bills.
+        </p>
+  
+        <p>
+          This isn't some wild fantasy—it’s a <strong>real, proven system</strong> that
+          countless everyday people are using to generate consistent, life-changing
+          income on autopilot.
+        </p>
+  
+        <p>
+          No experience? No problem.<br>
+          No tech skills? Doesn’t matter.<br>
+          This works for <strong>anyone</strong> willing to follow a simple,
+          step-by-step process.
+        </p>
+  
+        <p>
+          The best part? <strong>It runs 24/7 — even while you sleep.</strong>
+        </p>
+  
+        <p>
+          🔥 <strong>Ready to break free from financial stress and start living life on your terms?</strong> 🔥
+        </p>
+  
+        <p>
+          Click the button below and discover how you can wake up to an extra
+          <strong>$1,000–$5,000 in your bank account every single day.</strong>
+        </p>
+  
+        <a class="cta"
+        href="https://jvz3.com/c/3218449/415009?tid=welcome1bridge"
+        target="_blank"
            rel="noopener">
-          ▶ Watch Free Training
+          ▶ Watch Free Training Now
         </a>
       </div>
-    </div>
-  </div>
 
+
+  
 <script>
   function openVideoModal() {
     const modal = document.getElementById("videoModal");
