watch this 2 added

--- a/webby/index.html
+++ b/webby/index.html
@@ -165,7 +165,7 @@
   <div class="sub">$1k–$5k / Day Method</div>
 
   <div class="hero" onclick="openVideoModal()">
-    <img src="/images/watchthis.png" alt="Watch Video">
+    <img src="/images/watchthis2.png" alt="Watch Video">
   </div>
 </div>
 
